name:                hie-apply-refact
version:             0.1.0.0
synopsis:            Haskell IDE Apply Refact plugin
license:             BSD3
license-file:        ../LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.ApplyRefactPlugin
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , apply-refact
                     , either
                     , extra
                     , ghc-mod
                     , ghc-mod-core
                     , haskell-src-exts
                     , hie-base
                     , hie-plugin-api
                     , hlint >= 2.0.11
                     , text
                     , transformers
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
