name:                hie-base
version:             0.1.0.0
synopsis:            Haskell IDE API base types
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
                       Haskell.Ide.Engine.PluginTypes
                       Haskell.Ide.Engine.PluginTypes.Singletons
                       Haskell.Ide.Engine.SemanticTypes
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , text
                     , unordered-containers
                     , singletons
                     , vinyl
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
