name:                hie-base
version:             0.1.0.0
synopsis:            Haskell IDE API base types
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:
                       Haskell.Ide.Engine.PluginTypes
                       Haskell.Ide.Engine.PluginTypes.Singletons
                       Haskell.Ide.Engine.SemanticTypes
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , containers
                     , text
                     , unordered-containers
                     , singletons
                     , swagger2 >= 2.1
                     , vinyl
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
