Name:                   hie-bios
Version:                0.0.0
Author:                 Kazu Yamamoto <kazu@iij.ad.jp> and Matthew Pickering <matthewtpickering@gmail.com>
Maintainer:             Matthew Pickering <matthewtpickering@gmail.com>
License:                BSD3
License-File:           LICENSE
Homepage:               https://github.com/mpickering/hie-bios
Synopsis:               Set up a GHC API session
Description:

Category:               Development
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     ChangeLog
                        wrappers/bazel
                        wrappers/cabal

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
  HS-Source-Dirs:       src
  Exposed-Modules:      HIE.Bios
                        HIE.Bios.Check
                        HIE.Bios.Cradle
                        HIE.Bios.Debug
                        HIE.Bios.GHCApi
                        HIE.Bios.Gap
                        HIE.Bios.Doc
                        HIE.Bios.Load
                        HIE.Bios.Logger
                        HIE.Bios.Types
                        HIE.Bios.Things
                        HIE.Bios.Config
  Build-Depends:        base >= 4.9 && < 5
                      , containers
                      , deepseq
                      , directory
                      , filepath
                      , ghc
                      , process
                      , transformers
                      , file-embed
                      , temporary
                      , unix-compat
                      , cryptohash-sha1
                      , bytestring
                      , base16-bytestring
                      , dhall
                      , text
                      , lens-family-core
  if impl(ghc < 8.2)
    Build-Depends:      ghc-boot

Executable biosc
  Default-Language:     Haskell2010
  Main-Is:              biosc.hs
  Other-Modules:        Paths_hie_bios
  GHC-Options:          -Wall
  HS-Source-Dirs:       exe
  Build-Depends:        base >= 4.9 && < 5
                      , directory
                      , filepath
                      , ghc
                      , hie-bios


test-suite unit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test/
  main-is:             Main.hs
  other-modules:
  build-depends:       base
                     , hie-bios
                     , hspec
                     , filepath
                     , directory

  ghc-options:         -Wall -Wredundant-constraints
  default-language:    Haskell2010

Source-Repository head
  Type:                 git
  Location:             git://github.com/mpickering/hie-bios.git
