name:                hie-brittany
version:             0.1.0.0
synopsis:            Haskell IDE Hoogle plugin
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          zubin.duggal@gmail.com
copyright:           2017 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.BrittanyPlugin
  build-depends:       base >= 4.9 && < 5
                     , hie-plugin-api
                     , hie-base
                     , aeson
                     , directory
                     , vinyl
                     , ghc
                     , containers
                     , text
                     , transformers
                     , brittany
                     , ghc-mod
                     , ghc-boot
                     , haskell-lsp
                     , lens
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
