name:                hie-build-plugin
version:             0.1.0.0
synopsis:            Haskell IDE build plugin, using async processes
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          6yearold@gmail.com
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Haskell.Ide.BuildPlugin
  build-depends:       base >= 4.7 && < 5
                     , hie-plugin-api
                     , aeson
                     , containers
                     , stm
                     , text
                     , transformers
                     , Cabal
  ghc-options:         -Wall
  default-language:    Haskell2010
