name:                hie-build-plugin
version:             0.1.0.0
synopsis:            Haskell IDE build plugin
license:             BSD3
license-file:        ../LICENSE
author:              Gleb Popov
maintainer:          6yearold@gmail.com
copyright:           2016 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Haskell.Ide.BuildPlugin
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp
                     , hie-plugin-api
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , process
                     , stm
                     , text
                     , transformers
                     , yaml
                     , cabal-helper
                     , Cabal
  ghc-options:         -Wall
  default-language:    Haskell2010
