name:                hie-eg-plugin-async
version:             0.1.0.0
synopsis:            Haskell IDE example plugin, using async processes
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Haskell.Ide.ExamplePluginAsync
  build-depends:       base >= 4.7 && < 5
                     , hie-plugin-api
                     , aeson
                     , containers
                     , stm
                     , text
                     , transformers
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
