name:                hie-example-plugin2
version:             0.1.0.0
synopsis:            Haskell IDE example plugin
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.ExamplePlugin2
  build-depends:       base >= 4.9 && < 5
                     , hie-plugin-api
                     , aeson
                     , containers
                     , text
                     , transformers
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
