name:                hie-ghc-mod
version:             0.1.0.0
synopsis:            Haskell IDE ghc-mod plugin
license:             BSD3
license-file:        ../LICENSE
author:              Alan Zimmerman (initially)
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.GhcModPlugin
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , directory
                     , filepath
                     , ghc
                     , ghc-mod
                     , hie-base
                     , hie-plugin-api
                     , text
                     , transformers
                     , vinyl >= 0.5 && < 0.6

  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
