name:                hie-ghc-tree
version:             0.1.0.0
synopsis:            Haskell IDE GHC Tree plugin
license:             BSD3
license-file:        ../LICENSE
author:              JP Moresmau
maintainer:          jp.moresmau@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.GhcTreePlugin
  build-depends:       base >= 4.9 && < 5
                     , aeson
                     , ghc-dump-tree
                     , ghc-mod
                     , ghc-mod-core
                     , hie-base
                     , hie-plugin-api
                     , text
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
