name:                hie-hare
version:             0.1.0.0
synopsis:            Haskell IDE HaRe plugin
license:             BSD3
license-file:        ../LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Haskell.Ide.HaRePlugin
  build-depends:       base >= 4.7 && < 5
                     , HaRe
                     , aeson
                     , containers
                     , directory
                     , filepath
                     , ghc
                     , ghc-mod
                     , hie-base
                     , hie-plugin-api
                     , text
                     , transformers
                     , vinyl >= 0.5 && < 0.6
  ghc-options:         -Wall
  default-language:    Haskell2010
