name:                hie-hare
version:             0.1.0.0
synopsis:            Haskell IDE HaRe plugin
license:             BSD3
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.HaRePlugin
  build-depends:       base >= 4.9 && < 5
                     , HaRe
                     , aeson
                     , containers
                     , Diff
                     , ghc
                     , ghc-mod-core
                     , ghc-exactprint
                     , hie-plugin-api
                     , hie-ghc-mod
                     , haskell-lsp
                     , monad-control
                     , mtl
                     , text
                     , transformers
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
