name:                hie-ide-backend
version:             0.1.0.0
synopsis:            HIE ide-backend example
license:             BSD3
license-file:        ../LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:     Haskell.Ide.IdeBackend
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , containers
                     , fast-logger
                     , filepath
                     , ghc-mod
                     , hie-base
                     , hie-plugin-api
                     , ide-backend
                     , ide-backend-common
                     , stm
                     , text
                     , transformers
                     , vinyl
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
