name:                hie-plugin-api
version:             0.6.0.0
synopsis:            Haskell IDE API for plugin communication
license:             BSD3
license-file:        LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
-- cabal-helper for cabal 2.2/GHC 8.4 needs a cabal version >= 2
cabal-version:       >=2.0

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:
                       Haskell.Ide.Engine.ArtifactMap
                       Haskell.Ide.Engine.Compat
                       Haskell.Ide.Engine.Config
                       Haskell.Ide.Engine.Context
                       Haskell.Ide.Engine.GhcModuleCache
                       Haskell.Ide.Engine.ModuleCache
                       Haskell.Ide.Engine.MonadFunctions
                       Haskell.Ide.Engine.MonadTypes
                       Haskell.Ide.Engine.MultiThreadState
                       Haskell.Ide.Engine.PluginsIdeMonads
                       Haskell.Ide.Engine.PluginUtils
  build-depends:       base >= 4.9 && < 5
                     , Diff
                     , aeson
                     , constrained-dynamic
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , fingertree
                     , free
                     , ghc
                     , ghc-mod-core >= 5.9.0.0
                     , haskell-lsp == 0.9.*
                     , hslogger
                     , monad-control
                     , mtl
                     , stm
                     , syb
                     , text
                     , transformers
                     , unordered-containers
                     , yi-rope
  if os(windows)
    build-depends:     Win32
  else
    build-depends:     unix
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
