name:                hie-plugin-api
version:             0.14.0.0
synopsis:            Haskell IDE API for plugin communication
license:             BSD3
license-file:        LICENSE
author:              Many,TBD when we release
maintainer:          alan.zimm@gmail.com (for now)
copyright:           2015 TBD
category:            Web
build-type:          Simple
-- extra-source-files:
-- cabal-helper for cabal 2.2/GHC 8.4 needs a cabal version >= 2
cabal-version:       >=2.0

flag pedantic
  Description: Enable -Werror
  Default:     False

library
  exposed-modules:
                       Haskell.Ide.Engine.ArtifactMap
                       Haskell.Ide.Engine.Compat
                       Haskell.Ide.Engine.Cradle
                       Haskell.Ide.Engine.GhcCompat
                       Haskell.Ide.Engine.GhcUtils
                       Haskell.Ide.Engine.Config
                       Haskell.Ide.Engine.Context
                       Haskell.Ide.Engine.Ghc
                       Haskell.Ide.Engine.GhcModuleCache
                       Haskell.Ide.Engine.ModuleCache
                       Haskell.Ide.Engine.MonadFunctions
                       Haskell.Ide.Engine.MonadTypes
                       Haskell.Ide.Engine.MultiThreadState
                       Haskell.Ide.Engine.PluginApi
                       Haskell.Ide.Engine.PluginUtils
                       Haskell.Ide.Engine.PluginsIdeMonads
                       Haskell.Ide.Engine.TypeMap
  build-depends:       base >= 4.9 && < 5
                     , Diff
                     , aeson
                     , bytestring-trie
                     , bytestring
                     , cryptohash-sha1
                     , constrained-dynamic
                     , containers
                     , data-default
                     , directory
                     , filepath
                     , fingertree
                     , free
                     , ghc
                     , hie-bios >= 0.3.2 && < 0.4.0
                     , cabal-helper
                     , haskell-lsp == 0.19.*
                     , hslogger
                     , unliftio
                     , monad-control
                     , mtl
                     , process
                     , sorted-list
                     , stm
                     , syb
                     , text
                     , transformers
                     , unordered-containers
                     , transformers-base
                     , yaml >= 0.8.11
  if os(windows)
    build-depends:     Win32
  else
    build-depends:     unix
  ghc-options:         -Wall
  if flag(pedantic)
     ghc-options:      -Werror
  default-language:    Haskell2010
