name:                multi-component
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Foo
  build-depends:       base >= 4
  default-language:    Haskell2010
executable exe
  main-is:             Main.hs
  other-modules:       OtherMain
  build-depends:       base >= 4, multi-component
  default-language:    Haskell2010
