name:                add-package-test
version:             0.1.0.0
license:             BSD3
author:              Luke Lau
maintainer:          luke_lau@icloud.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     AddPackage
  build-depends:       base >=4.11 && <4.12
  -- hs-source-dirs:
  default-language:    Haskell2010
