cabal-version:       >=1.10
name:                sub-package
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple

library
  exposed-modules:     MyLib
  build-depends:       base >=4.12 && <4.13, plugins-api
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sub-package
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13, sub-package
  hs-source-dirs:      app
  default-language:    Haskell2010
