cabal-version:       >=2.0
name:                A
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     MyLib
  build-depends:       base >=4.9 && < 5
  default-language:    Haskell2010

executable A
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base >= 4.9 && < 5, A
  default-language:    Haskell2010
