cabal-version:       >=2.0
name:                B
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     MyLib
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

executable B
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base >= 4.9 && < 5, B
  default-language:    Haskell2010
